Corrected aligmnent of buttons in the Home page, also chnaged the background color of header component, also added scroll to the cart, also corrected its alignmnet.

--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -4,6 +4,11 @@
     border-radius: 10px;
     margin: 0;
 }
+@media(max-width:576px){
+    .cart-image{
+        margin-top: 10px;
+    }
+}
 .cart-align {
   margin-top: 120px !important;
   margin-right: 15px !important;
@@ -19,30 +24,59 @@
 }
 .cart-products{
     padding: 20px;
+    /* Set a maximum height for the cart products container */
+        max-height: 50vh;
+        overflow-y: auto;
+        /* Add vertical scrollbar when content exceeds the height */
 }
 .input-box{
-    width: 20%;
+    /* width: 20%; */
     text-align: center;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     width : 50% !important;
+}
+@media(max-width:576px){
+    .input-box{
+        margin-left: 15px !important;
+    }
 }
 .remove-btn {
     border-radius: 40px !important;
 }
 .item-price{
     color: grey !important;
-    margin-left: 0 !important;
-    margin-top: 10px !important;
+    /* margin-left: 0 !important;
+    margin-top: 10px !important; */
+}
+@media(max-width:576px){
+    .item-price{
+        margin-top: 20px;
+    }
 }
 .total-price{
     color:black;
     font-size: larger;
 }
+@media(max-width:576px){
+    .total-price{
+        margin-top: 20px !important;
+        text-align: center !important;
+    }
+}
+@media(max-width:576px){
+    .total-price{
+        margin-top: 20px;
+    }
+}
 .item-title{
     margin-left: 0;
 }
 .cart-card{
-    width:35vw;
+    width:auto;
+    /* Set a maximum height for the cart to make it scrollable */
+        max-height: 70vh;
+        overflow-y: auto;
+        /* Add vertical scrollbar when content exceeds the height */
 }
 .close-btn{
     top:20 !important;
