--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,6 +4,11 @@ height : 120px;
 .navbar-brand{
     font-size: 100px;
 }
+.navbar-link-header{
+    color:white;
+    background-color: black;
+    font-weight: bold;
+}
 .overlay-cart-container{
     position :fixed;
     top:0vh;
@@ -22,5 +27,6 @@ height : 120px;
 }
 .cart-button{
     border-radius: 40px  !important; 
-    margin-left: 10px !important;
+    margin-left: 0px !important;
+    padding-bottom: 10px !important;
 }
